=== Testimonials Widget ===

== Changelog ==

= trunk =
* Add location to meta_key ordering options
* BUGFIX [Convert q tags to blockquote](http://wordpress.org/support/topic/open-link-in-new-tab-html-validation) [Why?](http://www.w3schools.com/tags/tag_blockquote.asp)
* Beta testers needed section added
* Disable self-generated quotation marks
* Enable backwards compatibility for default options
* Rename CSS attributes to credit
* Revise README verbiage in general
* Simplify CSS naming
* Update TODOs
* Update features listing
* Update options listing
* Update premium features
* Update readme formatting

= 2.10.3 =
* Add "Menu Order" to Order By options
* Add Height option to automatically set min and max height
* BUGFIX [Only one testimonial displaying](http://wordpress.org/support/topic/only-one-testimonial-displaying)
* BUGFIX [Post Types Order](http://wordpress.org/support/topic/random-order-doesnt-work) - sorting conflict
* Delete data on uninstall 
* Enable quotes and join for IE7 - Thank you [SFMichael](http://wordpress.org/support/topic/ie-7-quotes-fix)
* Flush URLs on deactivation 
* Revise self::$base usage
* Revise settings_link handling
* Screenshot 16 Testimonials Widget Settings > Widget tab
* Update Premium link
* Update TODOs

= 2.10.2 =
* BUGFIX Settings initialization overwrote previous settings

= 2.10.1 =
* Moved [FAQ](http://aihr.us/testimonials-widget/faq/)
* Removed premium screenshots
* Rename screenshot-3.png screenshot-2.png
* Rename screenshot-4.png screenshot-3.png
* Rename screenshot-5.png screenshot-4.png
* Rename screenshot-6.png screenshot-5.png
* Rename screenshot-7.png screenshot-6.png
* Rename screenshot-8.png screenshot-7.png
* Rename screenshot-13.png screenshot-8.png
* Rename screenshot-14.png screenshot-9.png
* Rename screenshot-21.png screenshot-10.png
* Rename screenshot-22.png screenshot-11.png
* Rename screenshot-23.png screenshot-12.png
* Rename screenshot-24.png screenshot-13.png